# raytracing

./: .gitignore  CMakeLists.txt  buildscript.ps1  raytracing.cpp
include/: pixel.hpp  ray.hpp  rendering.hpp
include/Maths/: vectors.hpp
src/: main.cpp  raytracing.cpp
src/Maths/: vectors.hpp
